--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-      "start": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
     "nodemon": "^3.1.1"
+  },
+  "devDependencies": {
+    "prisma": "^5.14.0"
   }
 }
